main alignemtn fix

--- a/school.css
+++ b/school.css
@@ -24,6 +24,12 @@ body{
     background-position:unset;
     background-size:cover;
 } */
+main {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
 .backgrounddivider{
     display: flex;
     justify-content: center;
